--- a/week5/css/main.css
+++ b/week5/css/main.css
@@ -1,4 +1,12 @@
-h1 {color: navy;}
-main {background-color: orangered;}
-#test {color: palegreen;}
-.quote {font-weight: bold;}
+/* direct child selector */
+article>p {font-size: 24px;}
+
+/* adjacent sibling selector, the plus is the sibling selector */
+h3+ul 
+
+/*  thickness style color */
+{border: 1px solid black}
+
+/* attribute selector */
+img[src$=".jpg"] {border: 1px solid
+    black;}
