--- a/midterm/css/main.css
+++ b/midterm/css/main.css
@@ -130,6 +130,7 @@ h3{
 ul{
     list-style-type: square;
     padding-left: 22px;
+    line-height: 1.2rem;
 }
 /* putting black outline around contact info */
 #textboxes{    
